[package]
name = "winmix"
version = "0.1.0"
license = "MIT"
description = "Change Windows Mixer Volume via Rust"
keywords = ["audio", "windows"]
repository = "https://github.com/UnexomWid/winmix"
edition = "2021"

[dependencies]
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading", "Win32_System_ProcessStatus"] }
windows-result = "0.1.1"
